==> ameyer/Arduino-L6470/src/L6470.cpp <==
#include "L6470.h"
#include <Arduino.h>

void L64XX::init() {

  if (pin_SS >= 0) {   //init pin_SS if it has been set for this chip
    pinMode(pin_SS, OUTPUT);
    digitalWrite(pin_SS, HIGH);
  }

  // initialize SPI for the dSPIN chip's needs:
  //  most significant bit first,
  //  SPI clock not to exceed 5MHz,
  //  SPI_MODE3 (clock idle high, latch data on rising edge of clock)
  if (pin_SCK < 0) helper->spi_init();  // Use external SPI init function to init it
                                       // internal SPI already initialized

  // First things first: let's check communications. The L64XX_CONFIG register should
  //  power up to 0x2E88, so we can use that to check the communications.
  //Serial.println(GetParam(L64XX_CONFIG) == 0x2E88 ? "good to go" : "Comm issue");

  // First, let's set the step mode register:
  //   - SYNC_EN controls whether the BUSY/SYNC pin reflects the step
  //     frequency or the BUSY status of the chip. We want it to be the BUSY
  //     status.
  //   - STEP_SEL_x is the microstepping rate- we'll go full step.
  //   - SYNC_SEL_x is the ratio of (micro)steps to toggles on the
  //     BUSY/SYNC pin (when that pin is used for SYNC). Make it 1:1, despite
  //     not using that pin.
  //SetParam(L6470_STEP_MODE, BUSY_EN | STEP_SEL_1 | SYNC_SEL_1);

  // Set up the L64XX_CONFIG register as follows:
  //  PWM frequency divisor = 1
  //  PWM frequency multiplier = 2 (62.5kHz PWM frequency)
  //  Slew rate is 110V/us
  //  Do NOT shut down bridges on overcurrent
  //  Disable motor voltage compensation
  //  Hard stop on switch low
  //  16MHz internal oscillator, nothing on output
  SetParam(L64XX_CONFIG, CONFIG_PWM_DIV_1 | CONFIG_PWM_MUL_2 | CONFIG_SR_110V_us | CONFIG_OC_SD_DISABLE | CONFIG_VS_COMP_DISABLE | CONFIG_SW_HARD_STOP | CONFIG_INT_16MHZ);

  // Configure the dSPIN_RUN KVAL. This defines the duty cycle of the PWM of the bridges
  //  during running. 0xFF means that they are essentially NOT PWMed during run; this
  //  MAY result in more power being dissipated than you actually need for the task.
  //  Setting this value too low may result in failure to turn.
  //  There are L6470_ACC, L6470_DEC, and HOLD KVAL registers as well; you may need to play with
  //  those values to get acceptable performance for a given application.
  SetParam(L6470_KVAL_RUN, 0xFF);
  SetParam(L6470_KVAL_ACC, 0xFF);
  SetParam(L6470_KVAL_DEC, 0xFF);

  // Calling getStatus() clears the UVLO bit in the status register, which is set by
  //  default on power-up. The driver may not run without that bit cleared by this
  //  read operation.
  getStatus();

  hardStop(); // engage motors
}

void L64XX::setMicroSteps(int16_t microSteps) {
  uint8_t stepSel;
  for (stepSel = 0; stepSel < 8; stepSel++) {
    if (microSteps == 1) break;
    microSteps >>= 1;
  }

  if (L6470_status_layout == L6474_STATUS_LAYOUT) {
    if (stepSel > 4) stepSel = 4;               // 16 microsteps max on L6474
    SetParam(L6470_STEP_MODE, 0x98 | stepSel);  // NO SYNC
  }
  else
    SetParam(L6470_STEP_MODE, BUSY_EN | SYNC_SEL_1 | stepSel);
}

void L64XX::setAcc(const float acceleration) { SetParam(L6470_ACC, AccCalc(acceleration)); }

void L64XX::setDec(const float deceleration) { SetParam(L6470_DEC, DecCalc(deceleration)); }

void L64XX::SetLowSpeedOpt(const uint8_t enable) {
  Xfer(dSPIN_SET_PARAM | L6470_MIN_SPEED);
  Param(enable ? 0x1000 : 0, 13);
}

void L64XX::move(const long n_step) {
  const uint8_t dir = n_step >= 0 ? dSPIN_FWD : dSPIN_REV;
  Xfer(dSPIN_MOVE | dir);         // Set direction
  long n_stepABS = abs(n_step);
  if (n_stepABS > 0x3FFFFF) n_stepABS = 0x3FFFFF;
  Xfer(uint8_t(n_stepABS >> 16));
  Xfer(uint8_t(n_stepABS >> 8));
  Xfer(uint8_t(n_stepABS));
}

void L64XX::free() { Xfer(dSPIN_HARD_HIZ); }

uint8_t L64XX::Xfer(uint8_t data) {

  if (pin_SCK < 0)                                      // External SPI
    return (uint8_t) (
      position ? chain_transfer(data, pin_SS, position) // ... in a chain
               : transfer(data, pin_SS)                 // ... not chained
    );

  // if pin_SCK is set use internal soft SPI.
  if (position == 0) {                            // Internal soft SPI, not in a chain
    if (pin_SS >= 0) digitalWrite(pin_SS, LOW);   // Allow external code to control SS_PIN
    uint8_t bits = 8;
    do {
      digitalWrite(pin_SCK, LOW);
      digitalWrite(pin_MOSI, data & 0x80);
      delay(0);  // 10 cycles @ 84mhz
      digitalWrite(pin_SCK, HIGH);
      data <<= 1;        // little setup time
      data |= (digitalRead(pin_MISO) != 0);
    } while (--bits);
    delay(0);  // 10 cycles @ 84mhz
    if (pin_SS >= 0) digitalWrite(pin_SS, HIGH);
    return data;
  }
  else {     // internal soft SPI SPI, and in a chain
    #define CMD_NOP 0
    uint8_t out_data = 0;
    uint8_t return_data = 0;
    digitalWrite(pin_SS, LOW);
    for (uint8_t i = chain[0]; i >= 1; i--) {
      out_data = (chain[i] == position ? data : CMD_NOP);
      uint8_t bits = 8;
      do {
        digitalWrite(pin_SCK, LOW);
        digitalWrite(pin_MOSI, out_data & 0x80);
        delay(0);  // 10 cycles @ 84mhz
        digitalWrite(pin_SCK, HIGH);
        out_data <<= 1;        // little setup time
        out_data |= (digitalRead(pin_MISO) != 0);
      } while (--bits);
      delay(0);  // 10 cycles @ 84mhz
      if (chain[i] == position) return_data = out_data;
    }
    digitalWrite(pin_SS, HIGH);
    return return_data;
  }
  return 0; // never executed but prevents a compiler warning
}

uint32_t L64XX::ParamHandler(const uint8_t param, const uint32_t value) {
  // This switch structure handles the appropriate action for each register.
  //  This is necessary since not all registers are of the same length, either
  //  bit-wise or uint8_t-wise, so we want to make sure we mask out any spurious
  //  bits and do the right number of transfers. That is handled by the dSPIN_Param()
  //  function, in most cases, but for 1-uint8_t or smaller transfers, we call
  //  Xfer() directly.

  // These defines help handle the register address differences between L6470, L6480 & powerSTEP01
  #define L64XX_CONFIG_A  0x18  // L6470 & L6474: CONFIG ... L6480 & powerSTEP01: L6470_GATECFG1
  #define L64XX_STATUS_A  0x19  // L6470 & L6474: STATUS ... L6480 & powerSTEP01: L6470_GATECFG2
  #define L64XX_CONFIG_B  0x1A  // L6480 & powerSTEP01: CONFIG
  #define L64XX_STATUS_B  0x1B  // L6480 & powerSTEP01: STATUS

  switch (param) {
    // L6470_ABS_POS is the current absolute offset from home. It is a 22 bit number expressed
    //  in two's complement. At power up, this value is 0. It cannot be written when
    //  the motor is running, but at any other time, it can be updated to change the
    //  interpreted position of the motor.
    case L6470_ABS_POS:    return Param(value, 22);

    // L6470_EL_POS is the current electrical position in the step generation cycle. It can
    //  be set when the motor is not in motion. Value is 0 on power up.
    case L6470_EL_POS:     return Param(value, 9);

    // L6470_MARK is a second position other than 0 that the motor can be told to go to. As
    //  with L6470_ABS_POS, it is 22-bit two's complement. Value is 0 on power up.
    case L6470_MARK:       return Param(value, 22);

    // L6470_SPEED contains information about the current speed. It is read-only. It does
    //  NOT provide direction information.
    case L6470_SPEED:      return Param(0, 20);

    // L6470_ACC and L6470_DEC set the acceleration and deceleration rates. Set L6470_ACC to 0xFFF
    //  to get infinite acceleration/decelaeration- there is no way to get infinite
    //  deceleration w/o infinite acceleration (except the HARD STOP command).
    //  Cannot be written while motor is running. Both default to 0x08A on power up.
    // AccCalc() and DecCalc() functions exist to convert steps/s/s values into
    //  12-bit values for these two registers.
    case L6470_ACC:
    case L6470_DEC:        return Param(value, 12);

    // L6470_MAX_SPEED is just what it says- any command which attempts to set the speed
    //  of the motor above this value will simply cause the motor to turn at this
    //  speed. Value is 0x041 on power up.
    // MaxSpdCalc() function exists to convert steps/s value into a 10-bit value
    //  for this register.
    case L6470_MAX_SPEED:  return Param(value, 10);

    // L6470_MIN_SPEED controls two things- the activation of the low-speed optimization
    //  feature and the lowest speed the motor will be allowed to operate at. LSPD_OPT
    //  is the 13th bit, and when it is set, the minimum allowed speed is automatically
    //  set to zero. This value is 0 on startup.
    // MinSpdCalc() function exists to convert steps/s value into a 12-bit value for this
    //  register. SetLowSpeedOpt() function exists to enable/disable the optimization feature.
    case L6470_MIN_SPEED:  return Param(value, 12);

    // L6470_FS_SPD register contains a threshold value above which microstepping is disabled
    //  and the dSPIN operates in full-step mode. Defaults to 0x027 on power up.
    // FSCalc() function exists to convert steps/s value into 10-bit integer for this
    //  register.
    case L6470_FS_SPD:     return Param(value, 10);

    // KVAL is the maximum voltage of the PWM outputs. These 8-bit values are ratiometric
    //  representations: 255 for full output voltage, 128 for half, etc. Default is 0x29.
    // The implications of different KVAL settings is too complex to dig into here, but
    //  it will usually work to max the value for dSPIN_RUN, L6470_ACC, and L6470_DEC. Maxing the value for
    //  HOLD may result in excessive power dissipation when the motor is not running.
    case L6470_KVAL_HOLD:  return Xfer(uint8_t(value));
    case L6470_KVAL_RUN:   return Xfer(uint8_t(value));
    case L6470_KVAL_ACC:   return Xfer(uint8_t(value));
    case L6470_KVAL_DEC:   return Xfer(uint8_t(value));

    // L6470_INT_SPD, L6470_ST_SLP, L6470_FN_SLP_ACC and L6470_FN_SLP_DEC are all related to the back EMF
    //  compensation functionality. Please see the datasheet for details of this
    //  function- it is too complex to discuss here. Default values seem to work
    //  well enough.
    case L6470_INT_SPD:    return Param(value, 14);
    case L6470_ST_SLP:     return Xfer(uint8_t(value));
    case L6470_FN_SLP_ACC: return Xfer(uint8_t(value));
    case L6470_FN_SLP_DEC: return Xfer(uint8_t(value));

    // L6470_K_THERM is motor winding thermal drift compensation. Please see the datasheet
    //  for full details on operation- the default value should be okay for most users.
    case L6470_K_THERM:    return Xfer(uint8_t(value) & 0x0F);

    // L6470_ADC_OUT is a read-only register containing the result of the ADC measurements.
    //  This is less useful than it sounds; see the datasheet for more information.
    case L6470_ADC_OUT:    return Xfer(0);

    // Set the overcurrent threshold. Ranges from 375mA to 6A in steps of 375mA.
    //  A set of defined constants is provided for the user's convenience. Default
    //  value is 3.375A- 0x08. This is a 4-bit value.
    case L6470_OCD_TH:     return Xfer(uint8_t(value) & OCD_TH_MAX);
    // Stall current threshold. Defaults to 0x40, or 2.03A. Value is from 31.25mA to
    //  4A in 31.25mA steps. This is a 7-bit value.
    case L6470_STALL_TH:   return Xfer(uint8_t(value) & STALL_TH_MAX);

    // L6470_STEP_MODE controls the microstepping settings, as well as the generation of an
    //  output signal from the dSPIN. Bits 2:0 control the number of microsteps per
    //  step the part will generate. Bit 7 controls whether the BUSY/SYNC pin outputs
    //  a BUSY signal or a step synchronization signal. Bits 6:4 control the frequency
    //  of the output signal relative to the full-step frequency; see datasheet for
    //  that relationship as it is too complex to reproduce here.
    // Most likely, only the microsteps per step value will be needed; there is a set
    //  of constants provided for ease of use of these values.
    case L6470_STEP_MODE:  return Xfer(uint8_t(value));

    // L6470_ALARM_EN controls which alarms will cause the FLAG pin to fall. A set of constants
    //  is provided to make this easy to interpret. By default, ALL alarms will trigger the
    //  FLAG pin.
    case L6470_ALARM_EN:   return Xfer(uint8_t(value));

    // GATECFG1 & GATECFG2 - L6480 and powerSTEP01 only, these registers control the slew rate and off time of the
    // bridge power FETs.

    // L64XX_CONFIG contains some assorted configuration bits and fields. A fairly comprehensive
    //  set of reasonably self-explanatory constants is provided, but users should refer
    //  to the datasheet before modifying the contents of this register to be certain they
    //  understand the implications of their modifications. Value on boot is 0x2E88; this
    //  can be a useful way to verify proper start up and operation of the dSPIN chip.
    case L64XX_CONFIG_A:     if (L6470_status_layout == L6480_STATUS_LAYOUT) return Param(uint16_t(value & 0x07FF), 11);   // L6480 & powerSTEP01: GATECFG1 register
                             else                                            return Param(value, 16);                      // L6470 & L6474: CONFIG register
    case L64XX_CONFIG_B:     return Param(value, 16);                                                                      // L6480 & powerSTEP01: CONFIG register


    // L64XX_STATUS contains read-only information about the current condition of the chip. A
    //  comprehensive set of constants for masking and testing this register is provided, but
    //  users should refer to the datasheet to ensure that they fully understand each one of
    //  the bits in the register.
    case L64XX_STATUS_A:     if (L6470_status_layout == L6480_STATUS_LAYOUT) return Xfer(uint8_t(value));   // L6480 & powerSTEP01: GATECFG2 register
                             else                                            return Param(value, 16);       // L6470 & L6474: STATUS register
    case L64XX_STATUS_B:     return Param(0, 16);                                                           // L6480 & powerSTEP01 STATUS register

  }
  return Xfer(uint8_t(value));
}
