==> SaeedNowroozi/Stm32f4/L6470.c <==
#include "L6470.h"
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>
#include "delay.h"
#include "spi_l6470.h"

void init(){
	// This is the generic initialization function to set up the Arduino to
	//  communicate with the dSPIN chip. 

	// set up the input/output pins for the application.
//***	pinMode(10, OUTPUT);  // The SPI peripheral REQUIRES the hardware SS pin-
	                      //  pin 10- to be an output. This is in here just
	                      //  in case some future user makes something other
	                      //  than pin 10 the SS pin.
	//__delay(10000);                      
//***	pinMode(_SSPin, OUTPUT);
//***	digitalWrite(_SSPin, HIGH);
//***	pinMode(MOSI, OUTPUT);
//***	pinMode(MISO, INPUT);
//***	pinMode(SCK, OUTPUT);
//***	pinMode(BUSYN, INPUT);
//***	pinMode(RESET, OUTPUT);
	//__init_spi();
	//GPIO_SetBits(GPIOA, GPIO_Pin_4);
	// reset the dSPIN chip. This could also be accomplished by
	//  calling the "L6470::ResetDev()" function after SPI is initialized.
//***	digitalWrite(RESET, HIGH);
 __init_reset();
	GPIO_SetBits(GPIOD, GPIO_Pin_13);
	GPIO_ResetBits(GPIOD, GPIO_Pin_12);
//***	delay(10);
__delay(10);
//***	digitalWrite(RESET, LOW);
GPIO_ResetBits(GPIOD, GPIO_Pin_13);
//***	delay(10);
__delay(10);
//***	digitalWrite(RESET, HIGH);
GPIO_SetBits(GPIOD, GPIO_Pin_13);
//***	delay(10);
__delay(10);
	
	// initialize SPI for the dSPIN chip's needs:
	//  most significant bit first,
	//  SPI clock not to exceed 5MHz,
	//  SPI_MODE3 (clock idle high, latch data on rising edge of clock)  
//***	SPI.begin();
//***	SPI.setBitOrder(MSBFIRST);
//***	SPI.setClockDivider(SPI_CLOCK_DIV16); // or 2, 8, 16, 32, 64
//***	SPI.setDataMode(SPI_MODE3);
		 __init_spi();
		// __delay(15);
		// GPIO_SetBits(GPIOE, GPIO_Pin_3);
	// First things first: let's check communications. The CONFIG register should
	//  power up to 0x2E88, so we can use that to check the communications.
	//GetParam(CONFIG);
	if (GetParam(CONFIG) == 0x2E88){
			GPIO_ResetBits(GPIOD, GPIO_Pin_12);
	}else{

		GPIO_SetBits(GPIOD, GPIO_Pin_12);
	}

	// First, let's set the step mode register:
	//   - SYNC_EN controls whether the BUSY/SYNC pin reflects the step
	//     frequency or the BUSY status of the chip. We want it to be the BUSY
	//     status.
	//   - STEP_SEL_x is the microstepping rate- we'll go full step.
	//   - SYNC_SEL_x is the ratio of (micro)steps to toggles on the
	//     BUSY/SYNC pin (when that pin is used for SYNC). Make it 1:1, despite
	//     not using that pin.
	//SetParam(STEP_MODE, !SYNC_EN | STEP_SEL_1 | SYNC_SEL_1);
	__delay(1);
	
	SetParam(KVAL_RUN, 255);
	SetParam(KVAL_ACC, 255);
	SetParam(KVAL_DEC, 255);
	

	// Set up the CONFIG register as follows:
	//  PWM frequency divisor = 1
	//  PWM frequency multiplier = 2 (62.5kHz PWM frequency)
	//  Slew rate is 290V/us
	//  Do NOT shut down bridges on overcurrent
	//  Disable motor voltage compensation
	//  Hard stop on switch low
	//  16MHz internal oscillator, nothing on output
	SetParam(CONFIG, CONFIG_PWM_DIV_1 );  
	SetParam(CONFIG, CONFIG_PWM_MUL_2 );
  SetParam(CONFIG, CONFIG_SR_290V_us );
	SetParam(CONFIG, CONFIG_OC_SD_DISABLE );
	SetParam(CONFIG, CONFIG_VS_COMP_DISABLE );
	SetParam(CONFIG, CONFIG_SW_HARD_STOP );
	SetParam(CONFIG, CONFIG_INT_16MHZ );
	
	// Configure the RUN KVAL. This defines the duty cycle of the PWM of the bridges
	//  during running. 0xFF means that they are essentially NOT PWMed during run; this
	//  MAY result in more power being dissipated than you actually need for the task.
	//  Setting this value too low may result in failure to turn.
	//  There are ACC, DEC, and HOLD KVAL registers as well; you may need to play with
	//  those values to get acceptable performance for a given application.
	SetParam(KVAL_RUN, 0xFF);
	// Calling GetStatus() clears the UVLO bit in the status register, which is set by
	//  default on power-up. The driver may not run without that bit cleared by this
	//  read operation.
	
	getStatus();

	hardStop(); //engage motors
//  goTo(0x3FFFF0);
	//move(0x3FFFF0);
}

void setMicroSteps(int microSteps){
	  uint8_t stepVal;
	  
	  for(stepVal = 0; stepVal < 8; stepVal++){
	  	if(microSteps == 1) break;
	  	microSteps = microSteps >> 1;
	  }
	  
	  SetParam(STEP_MODE, !SYNC_EN | stepVal | SYNC_SEL_1);
}

void setAcc(float acceleration){
	// Configure the acceleration rate, in steps/tick/tick. There is also a DEC register;
	//  both of them have a function (AccCalc() and DecCalc() respectively) that convert
	//  from steps/s/s into the appropriate value for the register. Writing ACC to 0xfff
	//  sets the acceleration and deceleration to 'infinite' (or as near as the driver can
	//  manage). If ACC is set to 0xfff, DEC is ignored. To get infinite deceleration
	//  without infinite acceleration, only hard stop will work.
	unsigned long accelerationBYTES = AccCalc(acceleration);
	SetParam(ACC, accelerationBYTES);
}

void setDec(float deceleration){
	unsigned long decelerationBYTES = DecCalc(deceleration);
	SetParam(DEC, decelerationBYTES);
}

void SetLowSpeedOpt(bool enable){
	// Enable or disable the low-speed optimization option. If enabling,
	//  the other 12 bits of the register will be automatically zero.
	//  When disabling, the value will have to be explicitly written by
	//  the user with a SetParam() call. See the datasheet for further
	//  information about low-speed optimization.
	Xfer(SET_PARAM | MIN_SPEED);
	if (enable) Param(0x1000, 13);
	else Param(0, 13);
}

void move(long n_step){
	// MOVE will send the motor n_step steps (size based on step mode) in the
	//  direction imposed by dir (FWD or REV constants may be used). The motor
	//  will accelerate according the acceleration and deceleration curves, and
	//  will run at MAX_SPEED. Stepping mode will adhere to FS_SPD value, as well.

	uint8_t dir;
	
	if(n_step >= 0){
		dir =  FWD;
	}else{
		dir =  REV;
	}
	
	long n_stepABS = abs(n_step);
	
	Xfer(MOVE | dir); //set direction
	if (n_stepABS > 0x3FFFFF) n_step = 0x3FFFFF;
	Xfer((uint8_t)(n_stepABS >> 16));
	Xfer((uint8_t)(n_stepABS >> 8));
	Xfer((uint8_t)(n_stepABS));
}

void __free(){
	// disengage the motor immediately with no deceleration.
	Xfer(HARD_HIZ);
}

uint8_t Xfer(uint8_t data){
	// This simple function shifts a byte out over SPI and receives a byte over
	//  SPI. Unusually for SPI devices, the dSPIN requires a toggling of the
	//  CS (slaveSelect) pin after each byte sent. That makes this function
	//  a bit more reasonable, because we can include more functionality in it.
	uint8_t data_out;
	//***digitalWrite(_SSPin,LOW);
	GPIO_ResetBits(GPIOA, GPIO_Pin_4);
	// GPIO_WriteBit(GPIOA, GPIO_Pin_4, RESET);
	// SPI.transfer() both shifts a byte out on the MOSI pin AND receives a
	//  byte in on the MISO pin.
    data_out = Send_l6470(data);
//***	digitalWrite(_SSPin,HIGH);
  	GPIO_SetBits(GPIOA, GPIO_Pin_4);
	// GPIO_WriteBit(GPIOA, GPIO_Pin_4, SET);
	return data_out;
}

unsigned long ParamHandler(uint8_t param, unsigned long value){
	// Much of the functionality between "get parameter" and "set parameter" is
	//  very similar, so we deal with that by putting all of it in one function
	//  here to save memory space and simplify the program.
	unsigned long ret_val = 0;   // This is a temp for the value to return.
	// This switch structure handles the appropriate action for each register.
	//  This is necessary since not all registers are of the same length, either
	//  bit-wise or byte-wise, so we want to make sure we mask out any spurious
	//  bits and do the right number of transfers. That is handled by the dSPIN_Param()
	//  function, in most cases, but for 1-byte or smaller transfers, we call
	//  Xfer() directly.
	switch (param)
	{
	  // ABS_POS is the current absolute offset from home. It is a 22 bit number expressed
	  //  in two's complement. At power up, this value is 0. It cannot be written when
	  //  the motor is running, but at any other time, it can be updated to change the
	  //  interpreted position of the motor.
	  case ABS_POS:
	    ret_val = Param(value, 22);
	    break;
	  // EL_POS is the current electrical position in the step generation cycle. It can
	  //  be set when the motor is not in motion. Value is 0 on power up.
	  case EL_POS:
	    ret_val = Param(value, 9);
	    break;
	  // MARK is a second position other than 0 that the motor can be told to go to. As
	  //  with ABS_POS, it is 22-bit two's complement. Value is 0 on power up.
	  case MARK:
	    ret_val = Param(value, 22);
	    break;
	  // SPEED contains information about the current speed. It is read-only. It does 
	  //  NOT provide direction information.
	  case SPEED:
	    ret_val = Param(0, 20);
	    break; 
	  // ACC and DEC set the acceleration and deceleration rates. Set ACC to 0xFFF 
	  //  to get infinite acceleration/decelaeration- there is no way to get infinite
	  //  deceleration w/o infinite acceleration (except the HARD STOP command).
	  //  Cannot be written while motor is running. Both default to 0x08A on power up.
	  // AccCalc() and DecCalc() functions exist to convert steps/s/s values into
	  //  12-bit values for these two registers.
	  case ACC: 
	    ret_val = Param(value, 12);
	    break;
	  case DEC: 
	    ret_val = Param(value, 12);
	    break;
	  // MAX_SPEED is just what it says- any command which attempts to set the speed
	  //  of the motor above this value will simply cause the motor to turn at this
	  //  speed. Value is 0x041 on power up.
	  // MaxSpdCalc() function exists to convert steps/s value into a 10-bit value
	  //  for this register.
	  case MAX_SPEED:
	    ret_val = Param(value, 10);
	    break;
	  // MIN_SPEED controls two things- the activation of the low-speed optimization
	  //  feature and the lowest speed the motor will be allowed to operate at. LSPD_OPT
	  //  is the 13th bit, and when it is set, the minimum allowed speed is automatically
	  //  set to zero. This value is 0 on startup.
	  // MinSpdCalc() function exists to convert steps/s value into a 12-bit value for this
	  //  register. SetLowSpeedOpt() function exists to enable/disable the optimization feature.
	  case MIN_SPEED: 
	    ret_val = Param(value, 12);
	    break;
	  // FS_SPD register contains a threshold value above which microstepping is disabled
	  //  and the dSPIN operates in full-step mode. Defaults to 0x027 on power up.
	  // FSCalc() function exists to convert steps/s value into 10-bit integer for this
	  //  register.
	  case FS_SPD:
	    ret_val = Param(value, 10);
	    break;
	  // KVAL is the maximum voltage of the PWM outputs. These 8-bit values are ratiometric
	  //  representations: 255 for full output voltage, 128 for half, etc. Default is 0x29.
	  // The implications of different KVAL settings is too complex to dig into here, but
	  //  it will usually work to max the value for RUN, ACC, and DEC. Maxing the value for
	  //  HOLD may result in excessive power dissipation when the motor is not running.
	  case KVAL_HOLD:
	    ret_val = Xfer((uint8_t)value);
	    break;
	  case KVAL_RUN:
	    ret_val = Xfer((uint8_t)value);
	    break;
	  case KVAL_ACC:
	    ret_val = Xfer((uint8_t)value);
	    break;
	  case KVAL_DEC:
	    ret_val = Xfer((uint8_t)value);
	    break;
	  // INT_SPD, ST_SLP, FN_SLP_ACC and FN_SLP_DEC are all related to the back EMF
	  //  compensation functionality. Please see the datasheet for details of this
	  //  function- it is too complex to discuss here. Default values seem to work
	  //  well enough.
	  case INT_SPD:
	    ret_val = Param(value, 14);
	    break;
	  case ST_SLP: 
	    ret_val = Xfer((uint8_t)value);
	    break;
	  case FN_SLP_ACC: 
	    ret_val = Xfer((uint8_t)value);
	    break;
	  case FN_SLP_DEC: 
	    ret_val = Xfer((uint8_t)value);
	    break;
	  // K_THERM is motor winding thermal drift compensation. Please see the datasheet
	  //  for full details on operation- the default value should be okay for most users.
	  case K_THERM: 
	    ret_val = Xfer((uint8_t)value & 0x0F);
	    break;
	  // ADC_OUT is a read-only register containing the result of the ADC measurements.
	  //  This is less useful than it sounds; see the datasheet for more information.
	  case ADC_OUT:
	    ret_val = Xfer(0);
	    break;
	  // Set the overcurrent threshold. Ranges from 375mA to 6A in steps of 375mA.
	  //  A set of defined constants is provided for the user's convenience. Default
	  //  value is 3.375A- 0x08. This is a 4-bit value.
	  case OCD_TH: 
	    ret_val = Xfer((uint8_t)value & 0x0F);
	    break;
	  // Stall current threshold. Defaults to 0x40, or 2.03A. Value is from 31.25mA to
	  //  4A in 31.25mA steps. This is a 7-bit value.
	  case STALL_TH: 
	    ret_val = Xfer((uint8_t)value & 0x7F);
	    break;
	  // STEP_MODE controls the microstepping settings, as well as the generation of an
	  //  output signal from the dSPIN. Bits 2:0 control the number of microsteps per
	  //  step the part will generate. Bit 7 controls whether the BUSY/SYNC pin outputs
	  //  a BUSY signal or a step synchronization signal. Bits 6:4 control the frequency
	  //  of the output signal relative to the full-step frequency; see datasheet for
	  //  that relationship as it is too complex to reproduce here.
	  // Most likely, only the microsteps per step value will be needed; there is a set
	  //  of constants provided for ease of use of these values.
	  case STEP_MODE:
	    ret_val = Xfer((uint8_t)value);
	    break;
	  // ALARM_EN controls which alarms will cause the FLAG pin to fall. A set of constants
	  //  is provided to make this easy to interpret. By default, ALL alarms will trigger the
	  //  FLAG pin.
	  case ALARM_EN: 
	    ret_val = Xfer((uint8_t)value);
	    break;
	  // CONFIG contains some assorted configuration bits and fields. A fairly comprehensive
	  //  set of reasonably self-explanatory constants is provided, but users should refer
	  //  to the datasheet before modifying the contents of this register to be certain they
	  //  understand the implications of their modifications. Value on boot is 0x2E88; this
	  //  can be a useful way to verify proper start up and operation of the dSPIN chip.
	  case CONFIG: 
	    ret_val = Param(value, 16);
	    break;
	  // STATUS contains read-only information about the current condition of the chip. A
	  //  comprehensive set of constants for masking and testing this register is provided, but
	  //  users should refer to the datasheet to ensure that they fully understand each one of
	  //  the bits in the register.
	  case STATUS:  // STATUS is a read-only register
	    ret_val = Param(0, 16);
	    break;
	  default:
	    ret_val = Xfer((uint8_t)(value));
	    break;
	}
	return ret_val;
}
